static/css/meta.less
/* ... */
/* topdoc
  name: Meta header
  family: cfgov-meta
  patterns:
    - name: Default meta header
      markup: |
        <div class="meta-header">
            <span class="meta-header_right date">
                Nov 4, 2013
            </span>
            <a href="#" class="meta-header_left category-slug">
                <span class="cf-icon cf-icon-credit-card"></span>
                Consumer finance
            </a>
        </div>
      codenotes:
        - |
          Structural cheat sheet:
          -----------------------
          .meta-header
            .meta-header_right
            .meta-header_left
      notes:
        - ".meta-header_right should come first in the markup so that when it
          floats to the right it will appear on the same line as .meta-header_left."
        - "Note that the example shows .meta-header_left using the
          .category-slug pattern and .meta-header_right using the .date pattern
          but you could use other patterns in place of them. Or you can even
          swap them so that date is attached to .meta-header_left and
          .category-slug is attacked to .meta-header_right."
    - name: Alternate meta header arrangements
      markup: |
        <div class="meta-header">
            <a href="#" class="meta-header_right category-slug">
                <span class="cf-icon cf-icon-credit-card"></span>
            </a>
            <span class="meta-header_left date">
                Nov 4, 2013
            </span>
        </div>
        <br>
        <div class="meta-header">
            <a href="#" class="meta-header_left category-slug">
                <span class="cf-icon cf-icon-credit-card"></span>
                Consumer finance
            </a>
        </div>
      notes:
        - "Just some random variations to show off what you could do."
  tags:
    - cfgov-meta
*/

.meta-header {
    padding-bottom: unit(8px / @base-font-size-px, em);
    margin-bottom: unit(10px / @base-font-size-px, em);
    border-bottom: 1px solid @gray-50;
}

.meta-header_left {
    margin-bottom: 0;
}

.meta-header_right {
    display: block;
    margin-bottom: 0;
    .respond-to-min(600px, {
        .u-right();
        display: inline-block;
    });
}


/* topdoc
  name: EOF
  eof: true
*/

